# lqxp

./: .gitignore  .gitmodules  Cargo.toml  README.md  shell.nix  update.sh
.github/workflows/: tauri-ios.yml
deploy/pm2/: ecosystem.config.cjs
deploy/systemd/: qxp-turn.service.example
docs/: tauri-ios.md  turn-deployment.md
files/: config.dev.toml  config.example.toml  coturn.example.conf
rust/src/: accounts.rs  config.rs  db.rs  linkpreview.rs  main.rs  models.rs  server.rs  state.rs  utils.rs
rust/src/websocket/: mod.rs  protocol.rs
scripts/: bootstrap-turn-prod.sh  build-ios-local.sh  certbot-turn-deploy-hook.sh  dev-ios-local.sh  install-turn-systemd.sh  start-qxp.sh  start-turn.sh
web/: LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts
web/files/: qxp.sqlite
web/src/: env.d.ts  styles.css
web/src/calls/: WebRtcCallManager.ts  callTypes.ts
web/src/components/: AudioPlayer.vue  CallPanel.vue  ComposerBar.vue  ImageViewer.vue  MemberSidebar.vue  MessageBubble.vue  MessageList.vue  MessengerSidebar.vue  OnboardingScreen.vue  ProfileCard.vue  SettingsModal.vue  ThreadHeader.vue  VideoPlayer.vue
web/src/composables/: useMessenger.js  useMessenger.ts
web/src/config/: runtime.ts
web/src/crypto/: e2ee.ts
web/src/router/: index.ts
web/src/views/: InboxView.vue
