[package]
name = "qxprotocol"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qxprotocol"
path = "rust/src/main.rs"

[dependencies]
argon2 = "0.5"
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
bip39 = "2"
futures-util = "0.3"
http = "1"
mime_guess = "2"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "macros"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6", features = ["cors"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
